# WinSight-MCP

./: .gitignore  .mcp.json  CHANGELOG.md  README.md  fastmcp.json  pyproject.toml  release-please-config.json  server.json
.github/workflows/: release.yml
src/winsight_mcp/: __init__.py  __main__.py  process_manager.py  screenshot.py  server.py  types.py  window_manager.py
tests/: conftest.py  test_process_manager.py  test_screenshot.py  test_server.py  test_types.py  test_window_manager.py
